Changelog for Collections.

- Add parent as a new Collection's view setting
- Make TV columns searchable
- Use modx->getTableName to get table names for Tagger tables
- Show TV's default value in grid
- Clear filter use sort field & dir from view
- Prevent error while not passing Resource templates in Collection view

Collections 3.1.1
===================
- Fixed showing (empty) template in child's template select box
- Fixed renderer image path
- Fixed D&D reorder children when element or file tree is selected
- Fixed back to collection/selection button for static resources/weblinks/symlinks
- Fixed back to collection/selection button on create new child page

Collections 3.1.0
===================
- Fixed reset filter button in Selections
- Added option to set default values for content type for new children
- Added system setting to modify image path in image renderer
- Allow children under Selections
- Added an option to add quip column
- Fixed selecting templates in Collection view in Revo 2.2.x
- Added option to set default values for hidemenu,published,cacheable,searchable and richtext for new children
- Added option to specify sortby for Selections Resource search query
- Added option to set label for Back to Collection/Selection button
- Fixed displaying selection grid with TVs
- Pass whole row to snippet renderer
- Fixed sorting by TV with dash in name

Collections 3.0.2
===================
- Fixed saving Collections view from Resource's settings tab
- Link Resource to Selection can be done by searching ID
- Fixed passing sort dir int uppercase format to getSelections
- Removed parents option from getSelections call

Collections 3.0.1
===================
- Fixed update from grid

Collections 3.0.0
===================
- Added validation for column name if contains a dot
- Added PHP renderer (snippet) that will be used for a column
- Added view option to define Resource Classes that will be available in resource type select