@@ -47,6 +47,7 @@
         <field key="child_richtext" dbtype="int" precision="1" phptype="boolean" null="true" />
         <field key="child_content_type" dbtype="int" precision="10" phptype="integer" null="false" default="0" />
         <field key="parent" dbtype="varchar" precision="100" phptype="string" null="false" default="" />        
+        <field key="child_content_disposition" dbtype="int" precision="1" phptype="integer" null="true" />
 
         <aggregate alias="Setting" class="CollectionSetting" local="id" foreign="template" cardinality="one" owner="local" />
         <composite alias="Columns" class="CollectionTemplateColumn" local="id" foreign="template" cardinality="many" owner="local" />
