@@ -40,6 +40,7 @@ class CollectionsTemplateUpdateProcessor extends modObjectUpdateProcessor {
         $this->handleComboBoolean('child_cacheable');
         $this->handleComboBoolean('child_searchable');
         $this->handleComboBoolean('child_richtext');
+        $this->handleNull('child_content_disposition');
 
         $childTemplate = $this->getProperty('child_template', '');
         if ($childTemplate == '') {
@@ -148,6 +149,20 @@ class CollectionsTemplateUpdateProcessor extends modObjectUpdateProcessor {
         $this->setProperty($property, null);
 
         return null;
+    }
+    
+    public function handleNull($property) {
+        $value = $this->getProperty($property);
+
+        if ($value == '') {
+            $this->setProperty($property, null);
+
+            return null;
+        }
+
+        $this->setProperty($property, $value);
+
+        return $value;
     }
 
 }
